--- a/.github/workflows/depoloy.yml
+++ b/.github/workflows/depoloy.yml
@@ -23,6 +23,7 @@ jobs:
           KUBECONFIGFILE: ${{ secrets.KUBECONFIGFILE }}
           KUBECONFIG: ~/.kube/config
         run: |
+          mkdir -p $KUBECONFIG
           echo "$KUBECONFIGFILE" > $KUBECONFIG
 
       - name: Helm delpoy
