--- a/.github/workflows/depoloy.yml
+++ b/.github/workflows/depoloy.yml
@@ -32,6 +32,7 @@ jobs:
         env:
             KUBECONFIG: ${{ github.workspace }}/kube_config/config
         run: |
+          cat $KUBECONFIG
           kubectl config view
           helmfile --file ${{ github.workspace }}/helmfile.yaml apply --suppress-secrets
           
