--- a/.github/workflows/depoloy.yml
+++ b/.github/workflows/depoloy.yml
@@ -32,7 +32,7 @@ jobs:
         env:
             KUBECONFIG: ${{ github.workspace }}/kube_config/config
         run: |
-          cat $KUBECONFIG
-          kubectl config view
+          cat $KUBECONFIG | xxd -ps
+          kubectl config view | xxd -ps
           helmfile --file ${{ github.workspace }}/helmfile.yaml apply --suppress-secrets
           
